Change quantity feature.Updating docker file
